# evalsploit

./: .gitignore  README.md  README_CH.md  README_RU.md  README_ZH.md  TODO  main.py  proxy.txt  pyproject.toml  settings.ini  test.py
README/: README_CH.md
bypasses/: exec.py  trybypass.py
bypasses/exec/: do.php  exec.php.bak  expect_popen.php  passthru.php  pcntl_exec.php  popen.php  proc_open.php  shell_exec.php  system.php
bypasses/try/: try.php
data/: proxies.txt  settings.ini  useragents
data/downloads/: test.php
downloads/: catalog.php  dump.sql  index2.php  robots.txt
evalsploit/: __init__.py  __main__.py  cli.py  config.py  context.py
evalsploit/modules/: __init__.py  base.py  config_cmds.py  config_show_mod.py  exploit_mod.py  info_mod.py  php_console_mod.py  ping_mod.py  proxy_switch_mod.py  registry.py  reverse_mod.py  run_mod.py  scan_mod.py  sql_mod.py  try_mod.py
evalsploit/plugins/: README.md  clearlog.py  example_cwd.py  example_echo.py
evalsploit/transport/: __init__.py  payloads.py  send.py
exploits/: exploit.py  reverse.py
exploits/7-8/: bypass.php
exploits/7.0-7.3/: bypass.php
exploits/7.0-7.4/: bypass.php
exploits/7.3-8.1/: PHP 7.3-8.1 disable_functions bypass [concat_function].php  bypass.php
exploits/8.2-8.5/: bypass.php
exploits/reverse/: reverse.php  reverse2.php  (+2 more)
modules/: cat.py  cd.py  copy.py  delete.py  download.py  edit.py  exist.py  generate.py  ls.py  makefile.py  md.py  mutation.bak  mutation.py  proxy.py  rename.py  send.py  set.py  stat.py  touch.py  upload.py
scan/: sbd.py
tests/: test_payloads.py
(+55 files in other folders)
