[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evalsploit"
version = "3.1.0"
description = "Eval-based PHP backdoor client for red team / pentest"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
evalsploit = "evalsploit.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["evalsploit*"]
